# Inside-Agent

./: .gitignore  README.md  agent.json  pyproject.toml  requirements.txt
inside_agent/: __init__.py  agent.py  cli.py
inside_agent/memory/: base.py  file_memory.py
inside_agent/models/: base.py  interleaved_thinking.py  minimax.py
inside_agent/tools/: base.py  file_tool.py  shell_tool.py
inside_agent/utils/: context_manager.py  hierarchical_context_manager.py  logging_config.py  smart_context_manager.py
test/: hello_world.py  test_api.py  test_bash_codeblock.py  test_file_memory_integration.py  test_function_calling.py  test_hierarchical_context_manager.py  test_integration.py  test_shell_tool.py  test_shell_tool_direct.py  test_system_info.py  test_tool_format.py  test_tool_parsing.py  test_tool_parsing_simple.py
workspace/: core-memory.md
workspace/memory/: example.md
